--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^16.0.1",
     "@commitlint/config-conventional": "^15.0.0",
     "@commitlint/cz-commitlint": "^15.0.0",
     "@vitejs/plugin-vue": "^1.10.2",
@@ -61,7 +60,7 @@
   },
   "config": {
     "commitizen": {
-      "path": ""
+      "path": "@commitlint/cz-commitlint"
     }
   }
 }
